[package]
name = "advent_of_rust_2019"
version = "0.1.0"
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["day_1"]

[dependencies]


[dev-dependencies]
rstest = "0.4.1"
